feat: 🎸 redo task 1 with improved steering
